Fix icon in about window not showing

--- a/src/src/shared/components/mainScreens/welcomeScreen.scss
+++ b/src/src/shared/components/mainScreens/welcomeScreen.scss
@@ -2,7 +2,7 @@
 
 @include themed($themes) {
   #welcome-main {
-    background-image: url("../../../public/showcase-ultica.png");
+    background-image: url("../../../../public/showcase-ultica.png");
     background-repeat: no-repeat;
     background-size: cover;
 
